tests/neg-custom-args/captures/i21614.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21614.scala:12:33 ---------------------------------------
12 |  files.map((f: F) => new Logger(f)) // error, Q: can we make this pass (see #19076)?
   |                                 ^
   |Found:    (f : F)
   |Required: File^{any}
   |
   |Note that capability `any²` is not included in capture set {any}.
   |
   |where:    any  is a root capability classified as SharedCapability created in anonymous function of type (f²: F): Logger when checking argument to parameter f of constructor Logger
   |          any² is a root capability classified as SharedCapability in the type of parameter f
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21614.scala:15:23 ---------------------------------------
15 |  files.map(new Logger(_)) // error, Q: can we improve the error message?
   |                       ^
   |Found:    File^{C}
   |Required: File^{any}
   |
   |Note that capability `C` is not included in capture set {any}
   |because `any` is classified as trait SharedCapability but `C` is not.
   |
   |where:    any is a root capability classified as SharedCapability created in anonymous function of type (_$1: File^{C}): Logger when checking argument to parameter f of constructor Logger
   |
   | longer explanation available when compiling with `-explain`
